# bevy_jam2

./: Cargo.toml  README.md  index.html
.github/workflows/: release.yaml
assets/: plane.gltf
assets/mazes/: 1.ron.level  maze_shader.wgsl
credits/: CREDITS.md
resources/: icon.xcf  markers.xcf
src/: actions.rs  audio.rs  character.rs  enemy.rs  in_game_menu.rs  lib.rs  loading.rs  main.rs  map.rs  menu.rs  navigation.rs  spawn.rs  ui.rs
