[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
lto = false
codegen-units = 16

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = [  "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "jpeg",
    "x11",
    "filesystem_watcher",] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12", features = ["3d"] }
bevy-inspector-egui = "0.12.1"
bevy_mod_picking = "0.8.2"
bevy_common_assets = {version = "0.3.0", features = ["ron"] }
leafwing-input-manager = "0.5.2"
bevy_atmosphere = "0.4.0"

rand = { version = "0.8.3" }
serde = { version = "1" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
